# Projects-tracker

./: .gitignore  Dockerfile  LICENSE.md  Procfile  README.md  addtime.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
files/: test_workhours.json  workhours.json
src/: __init__.py  __main__.py  extensions.py  main.py  routes.py  setup.py  workhours.py  workhoursdecoder.py  workhoursencoder.py
src/classes/: errorhandler.py  errors.py  requesthandler.py  success.py  troubleshooter.py  workhours.py
src/classes/customerrors/: customerror.py  inputerror.py
src/classes/database/: databaseinterface.py  interface.py
src/classes/errors/: authentication.py  database.py
src/classes/models/: User.py  project.py  stage.py  user.py
src/classes/requestshandlers/: __init__.py  delhandler.py  gethandler.py  inithandler.py  posthandler.py  puthandler.py
src/classes/schemas/: projectschema.py  stageschema.py  userschema.py
src/classes/services/: authservice.py  projectservice.py  stageservice.py  userservice.py
src/classes/users/: userclass.py  usermanager.py  usermodel.py  usermodels.py  usermodelwrapper.py
src/database/: __init__.py  databaseinitiator.py  interface.py
src/errors/: authentication.py  database.py
src/models/: auth.py  payment.py  project.py  stage.py
src/routes/: projects.py  stages.py  users.py
src/services/: authservice.py  projectservice.py  stageservice.py  userservice.py
tests/: conftest.py
tests/classes/database/: test_interface.py
tests/unit/: test_databaseinterface.py
(+10 files in other folders)
